# ElectrostaticTools

./: CMakeLists.txt  README
doc/: manual.tex
examples/: m.rules  meoh.esp  meoh.mol2  meoh.mulliken.mol2  mol36.esp  mol36.mol2  phbr.esp  phbr.mmol  phbr.mol2
scripts/: get_eel.py  get_multipoles.py
src/: bcc_fitter.cpp  bcc_fitter.h  config.h.in  elec_tools_errors.h  elec_tools_helpers.h  ep_fitter.cpp  esp_modifier.cpp  grid.h  iotools.h  mcc_creator.h  mep_fitter.h  mep_rmsd.cpp  mmol2mol.cpp  molecule.h  mult_fitter.cpp  mult_tools_defines.h  multipole_orient_rules.h  multipole_placement_rules.h  multipole_setter.h  multipoles.h  smarts_matcher.h
src/bindings/: CMakeLists.txt  elec_tools.i  openbabel-perl.i  openbabel-python.i  stereo.i
src/bindings/Perl/: CMakeLists.txt
src/bindings/Python/: CMakeLists.txt
src/config/: orient.rules  placement.rules
src/optimizer/: abstract_optimizers.h  data_point.h  genetic.h  gradient_descent.h  nelder_mead.h  numerical_derivative.h  optimizer.h  optimizer_defines.h  variable_passer.h
src/tools/: comment_skipper.h  log_adder.h  matrix3.h  matrix4.h  par_table.h  vector3.h
src/typer/: bcc_typer.h  typer.h
tests/: arom.mmol  h2co.mmol  multipoles.py  nmac.mmol  nmac.mol2  orient_rules.py  orientation.py  phbr.mol2
